--- a/public/styles.css
+++ b/public/styles.css
@@ -15,8 +15,9 @@
 }
 
 .marquee {
-  width: 90%; /* 화면 크기의 90% */
+  width: 65%; /* 화면 크기의 90% */
   max-width: 800px; /* 최대 너비 800px */
+  height: 100px;
   border: 5px solid #00ff00; /* 밝은 초록색 테두리 */
   background-color: black; /* 전광판 배경색 */
   overflow: hidden;
@@ -31,6 +32,7 @@
   padding-left: 100%;
   animation: marquee 10s linear infinite;
   font-size: 54px; /* 글씨 크기 */
+  text-align: center;
   font-weight: bold; /* 글씨 두께 */
   color: #00ff00; /* 전광판 글씨 색상 (밝은 초록색) */
   text-shadow: 0 0 10px rgba(0, 255, 0, 0.7); /* 밝은 초록색 글씨 외곽선 */
